--- a/ToDo.html
+++ b/ToDo.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="Keywords" content="Todo,MyTodo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="ToDo.css" type=text/css>
     <title>To Do list</title>
